--- a/src/app/components/pages/home/categories/categories.component.html
+++ b/src/app/components/pages/home/categories/categories.component.html
@@ -2,35 +2,40 @@
 
 <h1 class="categories-title">What do we have?</h1>
 
-<!-- <app-background></app-background> -->
+<div class="cards">
+  <!-- Category Card for Learning Corner -->
+  <app-category-card 
+    [bgColor]="'#FF006E'" 
+    [bgIcon]="'images/learningCorenetCategory.png'"
+    [mainIcon]="'images/mainlearningCorenetCategory.png'" 
+    [title]="'Learning\nCorner'"
+    (cardClick)="onCardClicked('learningCorner')">
+  </app-category-card>
 
-<div class="cards justify-content-between" >
-  <!-- // Category Card for Learning Corner -->
-  <div class="col-auto"> <app-category-card [bgColor]="'#FF006E'" [bgIcon]="'images/learningCorenetCategory.png'"
-      [mainIcon]="'images/mainlearningCorenetCategory.png'" [title]="'Learning\nCorner'"
-      (cardClick)="onCardClicked('learningCorner')"></app-category-card></div>
+  <!-- Category Card for Shopping Corner -->
+  <app-category-card 
+    [bgColor]="'#9B57FA'" 
+    [bgIcon]="'images/shoppingCorenerCategory.png'"
+    [mainIcon]="'images/mainShoppingCorenerCategory.png'" 
+    [title]="'Shopping\nCorner'"
+    (cardClick)="onCardClicked('shoppingCorner')">
+  </app-category-card>
 
+  <!-- Category Card for Stories Corner -->
+  <app-category-card 
+    [bgColor]="'#FB5664'" 
+    [bgIcon]="'images/storyCorenerCategory.png'"
+    [mainIcon]="'images/mainStoryCorenerCategory.png'" 
+    [title]="'Stories\nCorner'"
+    (cardClick)="onCardClicked('storyCorner')">
+  </app-category-card>
 
-
-  <!-- Category Card for shopping Corner -->
-  <div class="col-auto"> <app-category-card [bgColor]="'#9B57FA'" [bgIcon]="'images/shoppingCorenerCategory.png'"
-      [mainIcon]="'images/mainShoppingCorenerCategory.png'" [title]="'Shopping\nCorner'"
-      (cardClick)="onCardClicked('shoppingCorner')"></app-category-card></div>
-
-
-  <!-- Category Card for shopping Corner -->
-  <div class="col-auto"> <app-category-card [bgColor]="'#FB5664'" [bgIcon]="'images/storyCorenerCategory.png'"
-      [mainIcon]="'images/mainStoryCorenerCategory.png'" [title]="'Stories\nCorner'"
-      (cardClick)="onCardClicked('storyCorner')"></app-category-card></div>
-
-
-
-      <!-- Category Card for shopping Corner -->
-  <div class="col-auto"> <app-category-card [bgColor]="'#6486FF'" [bgIcon]="'images/gameCorenerCategory.png'"
-      [mainIcon]="'images/mainGameCorenerCategory.png'" [title]="'Games\nCorner'"
-      (cardClick)="onCardClicked('gamesCorner')"></app-category-card></div>
-
-
-
-
+  <!-- Category Card for Games Corner -->
+  <app-category-card 
+    [bgColor]="'#6486FF'" 
+    [bgIcon]="'images/gameCorenerCategory.png'"
+    [mainIcon]="'images/mainGameCorenerCategory.png'" 
+    [title]="'Games\nCorner'"
+    (cardClick)="onCardClicked('gamesCorner')">
+  </app-category-card>
 </div>
