--- a/src/app/components/pages/home/categories/category-card/category-card.component.css
+++ b/src/app/components/pages/home/categories/category-card/category-card.component.css
@@ -41,7 +41,6 @@
   height: auto;
 }
 
-/* المحتوى */
 .main-content {
   position: relative;
   z-index: 1;
@@ -54,7 +53,7 @@
   font-family: "Comic Relief", system-ui;
   font-weight: 700;
   font-style: normal;
-  font-size: clamp(1.5rem, 5vw, 3.12rem);
+  font-size: 3rem;
   white-space: pre-line;
 }
 
