--- a/src/app/components/pages/home/home-games/home-games.component.css
+++ b/src/app/components/pages/home/home-games/home-games.component.css
@@ -1,21 +1,13 @@
 .games-title{
     font-family: "Baloo 2", sans-serif;
-    font-size: 4rem;
+    font-size: clamp(3rem, 4vw, 4rem);
     font-weight: 700;
     color: #000;
     margin-top: 40px;
-    margin-bottom: 280px;
+    margin-bottom: 300px;
     text-align: center;
+    
 }
-
-/* .paper-plane {
-    position: fixed;
-    top: -800px;
-    right: 0;
-    transform: rotate(-132.81deg);
-    z-index: -1;
-} */
-
 
 
 .super{
