--- a/src/app/components/pages/home/introduction/introduction.component.html
+++ b/src/app/components/pages/home/introduction/introduction.component.html
@@ -2,26 +2,40 @@
 <app-stars-background></app-stars-background>
 
 <div class="introduction animate__animated animate__fadeInDown row">
-    <div class=" intro-image-1 p-4 rounded-5 bg-primary col-md-4"><img class="img-fluid h-100 w-100 object-fit-cover"
-            src="images/introduction.png" alt=""></div>
-    <div class="intro-text-1 col-md-4">Adventurers, get ready for an extraordinary journey to the heart of an enchanted
-        world
-        filled with surprises, laughter and unforgettable adventures. Here in the universe of Patarif, every day is a
-        new adventure full of magic and exciting discoveries. Meet Patarif, the funny and creative hero who likes to
-        cook and explore new horizons. Accompanied by his faithful friend Chamy, the magic camel, Patarif invites you to
-        join him on thrilling adventures. Join us to discover captivating stories, fun games, creative activities and
-        exciting lessons that will take you into fantasy worlds and teach you important lessons.</div>
-</div>
-<br>
-<br>
-<div class="introduction animate__animated animate__fadeInDown row">
+    <!-- Image -->
+    <div class="intro-image-1 p-4 rounded-5 bg-primary col-12 col-md-4">
+        <img class="img-fluid h-100 w-100 object-fit-cover" src="images/introduction.png" alt="">
+    </div>
 
-    <div class="intro-text-1 col-md-4">Explore the magical desert, dance with the enchanted camels, solve riddles and
-        let your imagination run free. Whether you like to color, play interactive games or learn new things, you'll
-        find something here to entertain and learn by having fun. So get ready to experience magical moments with
-        Patarif and his friends. Join us on an adventure where friendship, creativity and curiosity are the keys to a
-        wonderful world. We are delighted to share these extraordinary moments with you.
-        Ready to embark on an unforgettable adventure? Welcome to the enchanted world of Patarif.</div>
-    <div class=" intro-image-1 p-4 rounded-5 col-md-4" style="background-color: rgba(251, 86, 100, 1);"><img class="img-fluid h-100 w-100 object-fit-cover"
-            src="images/introduction.png" alt=""></div>
+    <!-- Text -->
+    <div class="intro-text-1 col-12 col-md-6">
+        Aventuriers, préparez-vous pour un voyage extraordinaire au cœur d'un monde enchanté, rempli de surprises, de
+        rires et d'aventures inoubliables. Dans l'univers de Patarif, chaque jour est une nouvelle aventure pleine de
+        magie et de découvertes passionnantes. Rencontrez Patarif, le héros drôle et créatif qui aime cuisiner et
+        explorer de nouveaux horizons. Accompagné de son fidèle ami Chamy, le chameau magique, Patarif vous invite à le
+        rejoindre dans des aventures palpitantes. Rejoignez-nous pour découvrir des histoires captivantes, des jeux
+        amusants, des activités créatives et des leçons passionnantes qui vous transporteront dans des mondes
+        fantastiques et vous enseigneront des leçons importantes.
+    </div>
+</div>
+
+<br><br>
+
+<div class="introduction animate__animated animate__fadeInDown row">
+    <!-- Text -->
+    <div class="intro-text-1 col-12 col-md-6">
+        Explorez le désert magique, dansez avec les chameaux enchantés, résolvez des énigmes et
+        laissez libre cours à votre imagination. Que vous aimiez colorier, jouer à des jeux interactifs ou apprendre de
+        nouvelles choses, vous trouverez ici de quoi vous divertir et apprendre en vous amusant. Alors, préparez-vous à
+        vivre des moments magiques avec
+        Patarif et ses amis. Rejoignez-nous dans une aventure où l'amitié, la créativité et la curiosité sont les clés
+        d'un
+        monde merveilleux. Nous sommes ravis de partager ces moments extraordinaires avec vous.
+        Prêt à embarquer pour une aventure inoubliable ? Bienvenue dans le monde enchanté de Patarif.
+    </div>
+
+    <!-- Image -->
+    <div class="intro-image-1 p-4 rounded-5 col-12 col-md-4" style="background-color: rgba(251, 86, 100, 1);">
+        <img class="img-fluid h-100 w-100 object-fit-cover" src="images/introduction.png" alt="">
+    </div>
 </div>
