--- a/src/app/components/pages/learning/learning.component.css
+++ b/src/app/components/pages/learning/learning.component.css
@@ -1,9 +1,10 @@
-body {
+html, body {
+  height: 100%;
   margin: 0;
   padding: 0;
-  min-height: 100vh;
-  min-width: 100vw;
-  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .background {
@@ -23,14 +24,11 @@ body {
   display: block;
 }
 
+
 .main {
-  /* margin: 0 10%; */
-  position: absolute;
-  height: 80vh;
+  margin: 0 auto;
+  height: 90vh;
   width: 90vw;
-  transform: translate(-50%, -50%);
-  left: 50%;
-  top: 55%;
   z-index: 10;
   background-color: rgb(255, 210, 126);
   border-radius: 24px;
@@ -39,18 +37,16 @@ body {
   align-items: center;
   flex-direction: row;
   gap: 0;
-  padding: 0;
-  margin: 0;
   overflow: hidden;
   animation: mainBgFadeIn 1s forwards;
-  /* fallback for browsers that don't support animation */
-  -webkit-animation: mainBgFadeIn 5s ;
 }
+
 
 @keyframes mainBgFadeIn {
   from {
     background-color: transparent;
   }
+
   to {
     background-color: rgb(255, 210, 126);
   }
@@ -60,6 +56,7 @@ body {
   from {
     background-color: transparent;
   }
+
   to {
     background-color: rgba(255, 210, 126, 0.589);
   }
@@ -84,15 +81,19 @@ body {
 .item:nth-child(1) {
   animation-delay: 0.1s;
 }
+
 .item:nth-child(2) {
   animation-delay: 0.3s;
 }
+
 .item:nth-child(3) {
   animation-delay: 0.5s;
 }
+
 .item:nth-child(4) {
   animation-delay: 0.7s;
 }
+
 .item:nth-child(5) {
   animation-delay: 0.9s;
 }
@@ -104,48 +105,85 @@ body {
   }
 }
 
-.linear-background{
+.linear-background {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to top, rgba(0,0,0,0.5) 0%, transparent 84%);
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.5) 0%, transparent 84%);
   z-index: 0;
 }
-.item-background{
+
+.item-background {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0, 0, 0, 0.5);
 }
-.item img{
+
+.item img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-.item h3{
+.item h3 {
   position: absolute;
-  bottom: 100px;
+  bottom: 10%;
   font-family: "Baloo 2", sans-serif;
-    font-size: clamp(0.7rem, 2vw, 2rem);
+  font-size: clamp(0.8rem, 2.5vw, 2rem);
   font-weight: 700;
   text-align: center;
   z-index: 1;
   color: white;
 }
 
-/* when hovering */
-
+/* Hover effect */
 .item:hover {
   flex: 1.5 1 0;
   z-index: 2;
   transform: scaleX(1);
   transition: flex 0.5s, transform 0.5s;
 }
-.item:hover .item-background{
+
+.item:hover .item-background {
   visibility: hidden;
+}
+
+/* --- RESPONSIVENESS --- */
+
+/* Tablets */
+/* @media (max-width: 1024px) {
+  .main {
+    flex-direction: column;
+    height: auto;
+    min-height: 80vh;
+    padding: 1rem;
+  }
+  .item {
+    width: 100%;
+    height: 200px;
+  }
+} */
+
+/* Mobiles */
+@media (max-width: 600px) {
+  .main {
+    flex-direction: column;
+    height: 2000px;
+    /* padding: 1rem; */
+  }
+
+  .item {
+    width: 100%;
+    height: 90vh;
+  }
+
+  .item h3 {
+    bottom: 5%;
+    font-size: 1.2rem;
+  }
 }
