--- a/src/app/components/pages/learning/learning.component.html
+++ b/src/app/components/pages/learning/learning.component.html
@@ -3,48 +3,38 @@
 <app-stars-background></app-stars-background>
 
 <div class="main">
-    <a class="item" [routerLink]="['/tomate-story']">
-        <div class="linear-background"></div>
-        <div class="item-background"></div>
-        <img src="images/learningZone/tomate.png" alt="cover" class="item-image">
-        <h3 class="item-text">
-            Toma-Tomate !
-        </h3>
-    </a>
-    <div class="item" [routerLink]="['/banane-story']">
-        <div class="linear-background"></div>
+  <a class="item" [routerLink]="['/tomate-story']">
+    <div class="linear-background"></div>
+    <div class="item-background"></div>
+    <img src="images/learningZone/tomate.png" alt="cover" class="item-image">
+    <h3 class="item-text">Toma-Tomate !</h3>
+  </a>
 
-        <div class="item-background"></div>
-        <img src="images/learningZone/banane.png" alt="cover" class="item-image">
-        <h3 class="item-text">
-            Anne la banane
-        </h3>
-    </div>
-    <div class="item" [routerLink]="['/carotte-story']">
-        <div class="linear-background"></div>
+  <a class="item" [routerLink]="['/banane-story']">
+    <div class="linear-background"></div>
+    <div class="item-background"></div>
+    <img src="images/learningZone/banane.png" alt="cover" class="item-image">
+    <h3 class="item-text">Anne la banane</h3>
+  </a>
 
-        <div class="item-background"></div>
-        <img src="images/learningZone/carotte.png" alt="cover" class="item-image">
-        <h3 class="item-text">
-            Caro-Carotte !
-        </h3>
-    </div>
-    <div class="item" [routerLink]="['/brocoli-story']">
-        <div class="linear-background"></div>
+  <a class="item" [routerLink]="['/carotte-story']">
+    <div class="linear-background"></div>
+    <div class="item-background"></div>
+    <img src="images/learningZone/carotte.png" alt="cover" class="item-image">
+    <h3 class="item-text">Caro-Carotte !</h3>
+  </a>
 
-        <div class="item-background"></div>
-        <img src="images/learningZone/brocoli.png" alt="cover" class="item-image">
-        <h3 class="item-text">
-            Le Brocoli !
-        </h3>
-    </div>
-    <div class="item" [routerLink]="['/fraise-story']">
-        <div class="linear-background"></div>
+  <a class="item" [routerLink]="['/brocoli-story']">
+    <div class="linear-background"></div>
+    <div class="item-background"></div>
+    <img src="images/learningZone/brocoli.png" alt="cover" class="item-image">
+    <h3 class="item-text">Le Brocoli !</h3>
+  </a>
 
-        <div class="item-background"></div>
-        <img src="images/learningZone/fraise.png" alt="cover" class="item-image">
-        <h3 class="item-text">
-            La Fraise !
-        </h3>
-    </div>
+  <a class="item" [routerLink]="['/fraise-story']">
+    <div class="linear-background"></div>
+    <div class="item-background"></div>
+    <img src="images/learningZone/fraise.png" alt="cover" class="item-image">
+    <h3 class="item-text">La Fraise !</h3>
+  </a>
 </div>
