--- a/src/app/components/pages/contact-us/contact-us.component.html
+++ b/src/app/components/pages/contact-us/contact-us.component.html
@@ -10,68 +10,32 @@
       Nous serons ravis de vous répondre rapidement.
     </p>
 
-    <form
-      (submit)="onSubmit($event)"
-      class="d-flex flex-column justify-content-start align-items-start gap-4 w-100 mt-2"
-    >
+    <form (submit)="handleProtectedAction($event)"
+      class="d-flex flex-column justify-content-start align-items-start gap-4 w-100 mt-2">
       <!-- Name + Last Name -->
       <div class="row w-100 justify-content-between align-items-center">
         <div class="col-6">
-          <input
-            [(ngModel)]="formData.first_name"
-            name="first_name"
-            class="form-control"
-            type="text"
-            placeholder="prénom"
-            required
-          />
+          <input [(ngModel)]="formData.first_name" name="first_name" class="form-control" type="text"
+            placeholder="prénom" required />
         </div>
         <div class="col-6">
-          <input
-            [(ngModel)]="formData.last_name"
-            name="last_name"
-            class="form-control"
-            type="text"
-            placeholder="nom de famille"
-            required
-          />
+          <input [(ngModel)]="formData.last_name" name="last_name" class="form-control" type="text"
+            placeholder="nom de famille" required />
         </div>
       </div>
 
       <!-- email -->
-      <input
-        [(ngModel)]="formData.email"
-        name="email"
-        class="form-control"
-        type="email"
-        placeholder="e-mail"
-      />
+      <input [(ngModel)]="formData.email" name="email" class="form-control" type="email" placeholder="e-mail" />
 
       <!-- phone -->
-      <input
-        [(ngModel)]="formData.phone"
-        name="phone"
-        class="form-control"
-        type="text"
-        placeholder="téléphone"
-      />
+      <input [(ngModel)]="formData.phone" name="phone" class="form-control" type="text" placeholder="téléphone" />
 
       <!-- Message -->
-      <textarea
-        [(ngModel)]="formData.message"
-        name="message"
-        class="form-control"
-        rows="5"
-        placeholder="Écrivez votre message ici..."
-        required
-      ></textarea>
+      <textarea [(ngModel)]="formData.message" name="message" class="form-control" rows="5"
+        placeholder="Écrivez votre message ici..." required></textarea>
 
       <!-- Submit Button -->
-      <button
-        type="submit"
-        class="btn btn-primary px-4 py-3 w-100"
-        [disabled]="isLoading"
-      >
+      <button type="submit" class="btn btn-primary px-4 py-3 w-100" [disabled]="isLoading">
         {{ isLoading ? 'Envoi...' : 'Envoyer' }}
       </button>
 
@@ -88,3 +52,5 @@
     <img class="img-fluid" src="images/contactUs.png" alt="contact us cover" />
   </div>
 </div>
+
+      <app-home-footer></app-home-footer>
