--- a/src/app/components/pages/home/home-footer/home-footer.component.css
+++ b/src/app/components/pages/home/home-footer/home-footer.component.css
@@ -1,15 +1,13 @@
 .footer-home {
     width: 100%;
     color: white;
-    border-top-right-radius: 40px;
-    border-top-left-radius: 40px;
+    border-radius: 24px 24px 12px 12px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
     gap: 2rem;
     padding: 2rem 3rem;
     box-sizing: border-box;
     align-items: center;
-    border-radius: 24px 24px 0 0;
     margin: 0;
     
 }
@@ -69,7 +67,7 @@
     color: white;
     font-size: clamp(13px, 1.5vw, 15px);
     transition: all 0.3s ease;
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: transparent;
 }
 
 .links .link:hover {
