--- a/src/app/components/pages/home/introduction/introduction.component.css
+++ b/src/app/components/pages/home/introduction/introduction.component.css
@@ -1,23 +1,32 @@
 .introduction {
     display: flex;
     justify-content: center;
-    margin-top: 30px;
-    position: relative;
     align-items: center;
     gap: 4%;
-    padding-left: 4%;
-    padding-right: 4%;
-    width: 100vw;
-}
-body{
-    overflow: hidden;
-}
-.intro-image-1{
-    width: 44%;
-}
-.intro-text-1 {
-    width: 44%;
-    font-family: "Architects Daughter", cursive;
-    font-size: clamp(0.5rem, 1.5vw, 1.3rem);
+    padding: 20px 4%;
+    width: 100%;
 }
 
+.intro-text-1 {
+    font-family: "Architects Daughter", cursive;
+    font-size: clamp(1rem, 1.5vw, 1.5rem);
+}
+
+/* Mobile*/
+@media (max-width: 768px) {
+    .introduction {
+        flex-direction: column;
+        margin-top: 30px;
+        text-align: left;
+    }
+
+    .intro-image-1 {
+        width: 100% !important;
+    }
+
+    .intro-image-1 {
+        margin-bottom: 20px;
+        order: -1;
+    }
+
+}
