--- a/src/app/components/pages/shop/product-card/product-card.component.css
+++ b/src/app/components/pages/shop/product-card/product-card.component.css
@@ -1,9 +1,8 @@
-
 /* products */
 
 
 
- .product-card {
+.product-card {
     display: flex;
     flex-direction: column;
     /* align-items: sta; */
@@ -18,9 +17,10 @@
     transform: translateY(0);
     transition: background 0.2s, transform 0.2s;
     cursor: normal;
-    position: relative; 
+    position: relative;
 }
-.is-salled{
+
+.is-salled {
     position: absolute;
     top: 3%;
     left: 3%;
@@ -35,19 +35,21 @@
     height: fit-content;
     width: fit-content;
 }
-.product-card.disabled{
+
+.product-card.disabled {
     pointer-events: none;
     opacity: 0.7;
 }
-.card-img{
-    width:100%;
+
+.card-img {
+    width: 100%;
     height: 100%;
     /* border: rgb(0, 90, 192) 1px solid; */
     border-radius: 8px;
     overflow: hidden;
 }
 
- .title {
+.title {
     font-family: var(--mainFont);
     font-weight: 900;
     font-size: clamp(0.7rem, 3vw, 3rem);
@@ -56,15 +58,19 @@
     text-align: left;
     margin-bottom: 16px;
 }
-p, h2, button{
+
+p,
+h2,
+button {
     margin: 0;
 }
- .product-card:hover {
+
+.product-card:hover {
     background: #fff;
     transform: translateY(-5px);
 }
 
- .product-card img {
+.product-card img {
     width: 100%;
     /* height: auto; */
     object-fit: cover;
@@ -72,16 +78,16 @@ p, h2, button{
     /* margin-bottom: 8px; */
 }
 
- .product-title {
+.product-title {
     font-family: var(--comic);
-    font-size: clamp(0.7rem, 1.5vw, 1.5rem);
+    font-size: clamp(1.2rem, 1.5vw, 1.5rem);
     font-weight: 900;
     color: #000;
     /* margin-bottom: 4px; */
     text-align: left;
 }
 
- .product-rating {
+.product-rating {
     display: flex;
     align-items: center;
     gap: 6px;
@@ -89,14 +95,14 @@ p, h2, button{
     color: #E8B931;
 }
 
- .product-price {
+.product-price {
     font-family: var(--mainFont);
-    font-size: clamp(0.7rem, 2vw, 2rem);
+    font-size: clamp(1.2rem, 2vw, 2rem);
     font-weight: 900;
     color: #000;
 }
 
- .add-to-cart {
+.add-to-cart {
     visibility: hidden;
     margin-top: auto;
     padding: 8px 18px;
@@ -112,7 +118,7 @@ p, h2, button{
     cursor: pointer;
 }
 
- .add-to-cart:hover {
+.add-to-cart:hover {
     background: #FF006E;
     color: #fff;
     border: transparent 1px solid;
@@ -127,4 +133,11 @@ p, h2, button{
     align-items: center;
     gap: 2px;
     margin-bottom: 8px;
+}
+
+@media (max-width: 767px) {
+    .product-card {
+        width: 200px;
+        height: 300px;
+    }
 }
